--- a/frontend/register.html
+++ b/frontend/register.html
@@ -71,11 +71,18 @@
                 <label class="floating-label absolute top-5 left-5 text-gray-400 font-bold transition-all pointer-events-none uppercase tracking-widest text-xs">Phone Number</label>
             </div>
 
-            <div class="floating-label-group md:col-span-2">
-                <input type="password" id="regPass" placeholder=" " 
-                    class="floating-input w-full p-5 bg-white border-2 border-gray-100 rounded-2xl outline-none focus:border-blue-900 transition-all font-bold text-sm peer">
-                <label class="floating-label absolute top-5 left-5 text-gray-400 font-bold transition-all pointer-events-none uppercase tracking-widest text-xs">Password</label>
-            </div>
+            <div class="relative">
+    <input type="password" id="regPass" placeholder="Create Secure Password" 
+        oninput="checkPasswordStrength()"
+        class="w-full mt-1 p-4 bg-gray-50 border-2 border-transparent rounded-2xl outline-none focus:bg-white focus:border-blue-900 transition-all font-bold text-sm">
+    
+    <div class="mt-3 px-2">
+        <div class="h-1.5 w-full bg-gray-200 rounded-full overflow-hidden">
+            <div id="strengthBar" class="h-full w-0 transition-all duration-500 bg-red-500"></div>
+        </div>
+        <p id="strengthText" class="text-[9px] font-black uppercase tracking-widest mt-2 text-gray-400">Strength: Weak</p>
+    </div>
+</div>
 
             <button type="button" onclick="handleRegistration()" 
                 class="md:col-span-2 bg-blue-900 text-white font-black py-5 rounded-2xl hover:bg-orange-500 transition-all shadow-xl shadow-blue-900/10 transform active:scale-95 mt-4 uppercase tracking-widest">
@@ -89,7 +96,19 @@
             </p>
         </footer>
     </div>
-
+<div id="regOverlay" class="fixed inset-0 bg-blue-900/90 backdrop-blur-md z-[999] hidden flex flex-col items-center justify-center text-center p-6">
+    <div class="w-24 h-24 border-8 border-blue-200 border-t-orange-500 rounded-full animate-spin mb-8"></div>
+    <h2 class="text-white text-3xl font-black uppercase tracking-tighter animate__animated animate__pulse animate__infinite">Establishing Account</h2>
+    <p class="text-blue-200 font-bold text-xs uppercase tracking-[0.3em] mt-4">Please wait while we secure your credentials...</p>
+    
+    <div id="successContent" class="hidden animate__animated animate__fadeInUp">
+        <div class="w-20 h-20 bg-green-500 text-white rounded-full flex items-center justify-center mx-auto mb-6 text-3xl">
+            <i class="fas fa-check"></i>
+        </div>
+        <h3 class="text-white text-2xl font-black uppercase">Success!</h3>
+        <p class="text-blue-100 mt-2 font-bold">A welcome email has been dispatched to your Gmail.</p>
+    </div>
+</div>
     <script src="js/register.js"></script>
 </body>
 </html>
